--- a/app/views/relation/index.html.erb
+++ b/app/views/relation/index.html.erb
@@ -1,18 +1,5 @@
-<div>
-    <% unless @relations.empty? %>
-      <div class="card relations">
-        <div class="card-header">
-          <%= t('geoblacklight.relations.title') %>
-        </div>
+<% document ||= @document %>
 
-        <ul class="list-group list-group-flush">
-          <!-- commenting out ancestors so we can use parent-child relationship for linked records-->
-         <!-- <%= render 'ancestors' unless @relations.ancestors['numFound'].to_i == 0 %>-->
-          <%= render 'descendants' unless @relations.descendants['numFound'].to_i == 0 %>
-        </ul>
-
-      </div>
-    <% end %>
     <div class="card access">
         <div class="card-header">
             <%= t('geoblacklight.tools.access_data') %>
@@ -21,5 +8,4 @@
             <%= t('geoblacklight.tools.explore') %><%= document.holding_institute %>
         <% end %>
     </div>
-</div>
 
