trying to access document

--- a/app/views/relation/index.html.erb
+++ b/app/views/relation/index.html.erb
@@ -5,7 +5,7 @@
             <%= t('geoblacklight.tools.access_data') %>
         </div>
         <%= link_to document.external_url do %>
-            <%= t('geoblacklight.tools.explore') %><%= document.holding_institute %>
+            <%= t('geoblacklight.tools.explore') %><%= @document.holding_institute %>
         <% end %>
     </div>
 
