Get to working but in wrong containing box

--- a/app/views/relation/index.html.erb
+++ b/app/views/relation/index.html.erb
@@ -1,11 +1,15 @@
-<% document ||= @document %>
-
-    <div class="card access">
-        <div class="card-header">
-            <%= t('geoblacklight.tools.access_data') %>
-        </div>
-        <%= link_to document.external_url do %>
-            <%= t('geoblacklight.tools.explore') %>
-        <% end %>
+<% unless @relations.empty? %>
+  <div class="card relations">
+    <div class="card-header">
+      <%= t('geoblacklight.relations.title') %>
     </div>
+
+    <ul class="list-group list-group-flush">
+      <!-- commenting out ancestors so we can use parent-child relationship for linked records-->
+     <!-- <%= render 'ancestors' unless @relations.ancestors['numFound'].to_i == 0 %>-->
+      <%= render 'descendants' unless @relations.descendants['numFound'].to_i == 0 %>
+    </ul>
+
+  </div>
+<% end %>
 
