--- a/app/views/catalog/_full_layer_description.html.erb
+++ b/app/views/catalog/_full_layer_description.html.erb
@@ -1,8 +1,8 @@
-<div class="card access">
+<% if document.external_url.present? %>
     <div class="card-header">
         <%= t('geoblacklight.tools.access_data') %>
     </div>
     <%= link_to document.external_url do %>
-        <%= t('geoblacklight.tools.explore') %><%= document.holding_institute %>
+        <%= t('geoblacklight.tools.explore') %><%= document.holding_institue %>
     <% end %>
-</div>
+<% end %>
