RDM-5321 Add download panel beside map in landing page

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -117,3 +117,11 @@ padding: 8px;
 li.data_dictionary > a {
     padding-left: 0px !important;
 }
+
+input.feature-checkbox {
+    margin-left: 0px;
+}
+
+label.feature-label {
+    margin-left: 20px;
+}
