--- a/app/views/catalog/_show_geo_polygon_controls.erb
+++ b/app/views/catalog/_show_geo_polygon_controls.erb
@@ -1,5 +1,5 @@
 <% document ||= @document %>
 
 <% if document.has_polygon? %>
-  <%= render partial: 'show_geo_checkboxes', locals: { all_id: document.polygon_all_id, all_i18n_key: 'geoblacklight.show.geospatial_info.select.polygon', checkbox_class: 'polygon', prefix: document.polygon_prefix, values: document.polygons } %>
+  <%= render partial: 'show_geo_checkboxes', locals: { all_id: 'polygon-all', all_i18n_key: 'geoblacklight.show.geospatial_info.select.polygon', checkbox_class: 'polygon', prefix: 'polygon-', values: document.polygons } %>
 <% end %>
