RDM-5321 Change name for show map sidebar

--- a/app/views/catalog/_show_default_viewer_container.html.erb
+++ b/app/views/catalog/_show_default_viewer_container.html.erb
@@ -17,6 +17,6 @@
     <% end %>
     </div>
 
-    <%= render :partial => 'show_map_controls' %>
+    <%= render :partial => 'show_map_sidebar' %>
 
 </div>
