RDM-5327 Add dividers between metadata fields

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -125,3 +125,7 @@ input.feature-checkbox {
 label.feature-label {
     margin-left: 20px;
 }
+
+hr.catalog-section-divider {
+    border: 1px solid rgba(0,0,0,0.1);
+}
