--- a/app/views/catalog/_show_default_viewer_container.html.erb
+++ b/app/views/catalog/_show_default_viewer_container.html.erb
@@ -1,6 +1,7 @@
 <% document ||= @document %>
 
-<hr>
+<hr class="catalog-section-divider">
+
 <div class="row">
     <div class="col">
         <%= content_tag :h3, t('geoblacklight.show.geospatial_info.heading') %>
