--- a/app/views/catalog/_data_dictionary.html.erb
+++ b/app/views/catalog/_data_dictionary.html.erb
@@ -1,5 +1,5 @@
 <% if document.data_dictionary_download.present? %>
     <%= link_to document.data_dictionary_download[:data_dictionary] do %>
-        <%= fa_icon "download", text: t('geoblacklight.references.data_dictionary') %>
+        <%= fa_icon "download", text: t('geoblacklight.references.data_dictionary'), right: true %>
     <% end %>
 <% end %>
