--- a/app/views/catalog/_show_full_layer_description.html.erb
+++ b/app/views/catalog/_show_full_layer_description.html.erb
@@ -8,7 +8,7 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item" >
                 <%= link_to document.external_url do %>
-                    <%= t('geoblacklight.tools.explore') %><%= document.holding_institute %>
+                  <%= fa_icon "external-link", text: t('geoblacklight.tools.explore') + document.holding_institute, right: true %>
                 <% end %>
             </li>
         </ul>
