RDM-5327 Convert external link to button and increase size of sidebar

--- a/app/views/catalog/_show_full_layer_description.html.erb
+++ b/app/views/catalog/_show_full_layer_description.html.erb
@@ -7,7 +7,7 @@
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item" >
-                <%= link_to document.external_url do %>
+                <%= link_to document.external_url, class: 'btn btn-primary' do %>
                   <%= fa_icon "external-link", text: t('geoblacklight.tools.explore') + document.holding_institute, right: true %>
                 <% end %>
             </li>
