RDM-5327 Add citation sidebar and add margins for sidebar elements

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -133,3 +133,8 @@ hr.catalog-section-divider {
 .card-header {
     font-weight: 500;
 }
+
+.card.sidebar {
+    margin-bottom: 16px;
+    margin-top: 16px;
+}
