--- a/app/views/catalog/_show_full_layer_description.html.erb
+++ b/app/views/catalog/_show_full_layer_description.html.erb
@@ -1,9 +1,9 @@
 <% document ||= @document %>
 
 <% if document.external_url.present? %>
-    <div class="card access">
+    <div class="card sidebar access">
         <div class="card-header">
-          <%= t('geoblackligh.tools.access_data') %>
+          <%= t('geoblacklight.tools.access_data') %>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item" >
