--- a/app/views/catalog/_show_sidebar.html.erb
+++ b/app/views/catalog/_show_sidebar.html.erb
@@ -1,5 +1,7 @@
 <%= render :partial => "show_full_layer_description" %>
 
+<%= render :partial => 'show_citations' %>
+
 <%= render :partial => 'show_tools' %>
 
 <% unless @document.more_like_this.empty? %>
