--- a/app/views/catalog/_show_citations.erb
+++ b/app/views/catalog/_show_citations.erb
@@ -43,7 +43,7 @@
           <% end %>
 
           <%= content_tag :div do %>
-            <%= link_to document.external_url do %>
+            <%= link_to download_bibtex_url do %>
               <%= fa_icon "download", text: t('geoblacklight.show.citation.bibtex'), right: true %>
             <% end %>
           <% end %>
