--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -147,3 +147,8 @@ ul.list-group.list-group-flush {
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+hr.metadata-divider {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+}
