RDM-5327 Change non explore buttons to secondary

--- a/app/views/catalog/_show_citations.erb
+++ b/app/views/catalog/_show_citations.erb
@@ -33,7 +33,7 @@
     </div>
     <ul class="list-group list-group-flush">
         <li class="list-group-item" >
-          <button class='btn btn-primary' type="button" data-toggle="modal" data-target="#apaModal">
+          <button class='btn btn-secondary' type="button" data-toggle="modal" data-target="#apaModal">
             <%= fa_icon "file", text: t('geoblacklight.show.citation.apa.button'), right: true %>
           </button>
         </li>
