--- a/app/views/catalog/_show_geo_bbox_controls.erb
+++ b/app/views/catalog/_show_geo_bbox_controls.erb
@@ -1,5 +1,6 @@
 <% document ||= @document %>
+print document
 
-<% if document.has_bbox? %>
+<% if document.has_bboxes_sm? %>
   <%= render partial: 'show_geo_checkboxes', locals: { all_id: 'bbox-all', all_i18n_key: 'geoblacklight.show.geospatial_info.select.bbox', checkbox_class: 'bbox', prefix: 'bbox-', values: document.bboxes } %>
 <% end %>
