RDM-5591 Add additional metadata to item landing pages

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -152,3 +152,9 @@ hr.metadata-divider {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
 }
+
+.document-additional-metadata.dl-invert {
+ dt {
+  font-weight: bold;
+ }
+}
