--- a/app/views/catalog/_show.html.erb
+++ b/app/views/catalog/_show.html.erb
@@ -1,4 +1,5 @@
 <% doc_presenter = show_presenter(document) %>
+
 <%# default partial to display solr document fields in catalog show view -%>
 <dl class="row dl-invert document-metadata">
   <div class="col-lg-8">
@@ -7,11 +8,13 @@
           <hr class="metadata-divider">
         </div>
         <% doc_presenter.fields_to_render.each do |field_name, field, field_presenter| -%>
-          <dt class="blacklight-<%= field_name.parameterize %> col-md-3"><%= render_document_show_field_label document, label: field_presenter.label, field: field_name %></dt>
-          <dd class="blacklight-<%= field_name.parameterize %> col-md-9"><%= field_presenter.render %></dd>
-          <div class="col-sm-12">
-            <hr class="metadata-divider">
-          </div>
+          <% if not is_additional_metadata? field_name and is_locale_for_metadata? field_name and not field_name == Settings.FIELDS.TITLE_EN and not field_name == Settings.FIELDS.TITLE_FR %>
+            <dt class="blacklight-<%= field_name.parameterize %> col-md-3"><%= render_document_show_field_label document, label: field_presenter.label, field: field_name %></dt>
+            <dd class="blacklight-<%= field_name.parameterize %> col-md-9"><%= field_presenter.render %></dd>
+            <div class="col-sm-12">
+              <hr class="metadata-divider">
+            </div>
+          <% end -%>
         <% end -%>
       </div>
   </div>
