debugging checkbox label

--- a/app/views/catalog/_show_geo_checkboxes.erb
+++ b/app/views/catalog/_show_geo_checkboxes.erb
@@ -7,6 +7,9 @@
       <% values.each_with_index do |value, index| %>
         <li class="list-group-item">
             <%= check_box_tag prefix + index.to_s, prefix + index.to_s, true, class: 'form-check-input feature-checkbox ' + checkbox_class %>
+            <script>
+                console.log(value["checkboxes"]);
+            </script>
             <%= label_tag prefix + index.to_s, value["checkboxes"], class: 'form-check-label feature-label' %>
         </li>
       <% end %>
