sanity on checkbox label

--- a/app/views/catalog/_show_geo_checkboxes.erb
+++ b/app/views/catalog/_show_geo_checkboxes.erb
@@ -10,7 +10,7 @@
             <script>
                 console.log(value["checkboxes"]);
             </script>
-            <%= label_tag prefix + index.to_s, value["checkboxes"], class: 'form-check-label feature-label' %>
+            <%= label_tag prefix + index.to_s, "test1", class: 'form-check-label feature-label' %>
         </li>
       <% end %>
     </ul>
