RDM-5327 Always keep links underlined

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -24,6 +24,7 @@ $logo-image: image_url('blacklight/geodisy.svg') !default
  }
 
 a:link {
+    text-decoration: underline;
     color: #3344dd !important;
 }
 
