RDM-5734 Change search results to have more detail
Changes the search results to have source repo, creators and issued date
as well as the title. It adds the ability to have source repo logos if
the document has one. It changes the sort options and moves the
pagination and sorting to be above just the search results. It also
increases the screen width used to 95% if it is above the largest
breakpoint for bootstrap to better use the screen real estate on larger
screens.

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -163,3 +163,33 @@ hr.metadata-divider {
 .card-header {
     font-weight: 500;
 }
+
+@media (min-width: 1400px) {
+  .container {
+      max-width: 95% !important;
+  }
+}
+
+.index_title > span > a {
+    color: black;
+    font-size: 1.3em;
+    margin-bottom: 0px;
+    overflow-x: inherit;
+    white-space: normal;
+}
+
+.index_creators {
+    font-style: italic;
+}
+
+.index_date {
+    font-style: italic;
+}
+
+.documents-list .document {
+    border-bottom: 1px solid #dee2e6;
+}
+
+.repo-icon {
+    width: 72px;
+}
