--- a/app/views/catalog/_show_geo_controls.erb
+++ b/app/views/catalog/_show_geo_controls.erb
@@ -1,8 +1,10 @@
 <% document ||= @document %>
 
-<div class="row mb-1">
-    <%= content_tag :div, t('geoblacklight.show.geospatial_info.select.help'), class: 'col' %>
-</div>
+<% if document.has_something? %>
+    <div class="row mb-1">
+        <%= content_tag :div, t('geoblacklight.show.geospatial_info.select.help'), class: 'col' %>
+    </div>
+<% end %>
 
 <div class="row">
     <ul class="list-group col">
