--- a/app/views/catalog/_index_split_default.html.erb
+++ b/app/views/catalog/_index_split_default.html.erb
@@ -8,7 +8,8 @@
   <span class="col-10 col-md-9 col-xl-10">
     <div class="index_title col">
       <span class="title-wrapper">
-        <%= link_to_document document, title: document[blacklight_config.index.title_field] %>
+        <% counter = document_counter_with_offset(document_counter) %>
+        <%= link_to get_locale_title(blacklight_config, document), get_title_url(document), get_title_opts(document, counter) %>
       </span>
       <span class='status-icons'>
         <%= render partial: 'header_icons', locals: { document: document } %>
