--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -62,13 +62,14 @@ a.nav-link.navbar-link:hover, a.nav-link.navbar-link:focus, a.nav-link.navbar-li
 .submit-search-text:hover {
   text-decoration: underline !important;
 }
-.leaflet-control-zoom-in:hover, .leaflet-control-zoom-out:hover, .leaflet-control-zoom-in:focus, .leaflet-control-zoom-out:focus, .leaflet-control-zoom-in:active, .leaflet-control-zoom-out:active {
+ .leaflet-control-zoom-in:hover, .leaflet-control-zoom-out:hover, .leaflet-control-zoom-in:focus, .leaflet-control-zoom-out:focus, .leaflet-control-zoom-in:active, .leaflet-control-zoom-out:active {
     color: #3344dd !important;
     text-decoration: none !important;
 }
 
 a.leaflet-control-zoom-in, a.leaflet-control-zoom-out{
    color: black !important;
+   text-decoration: none !important;
 }
 
 li.page-item {
