--- a/app/views/catalog/_show_geo_downloads.erb
+++ b/app/views/catalog/_show_geo_downloads.erb
@@ -8,7 +8,7 @@
         <%= select_tag 'download_geo_file_choose', options_for_select(document.files(t('geoblacklight.show.geospatial_info.file.none'))), class: 'form-select col-sm-9 download-select' %>
     </div>
 
-    <div class="row mb-3">
-        <%= button_tag fa_icon("download", text: t('geoblacklight.show.geospatial_info.file.download')), name: 'download_geo_file', class: 'btn btn-primary col-sm-7' %>
+    <div disabled id="download_button" class="row mb-3">
+        <%= button_tag fa_icon("download", text: t('geoblacklight.show.geospatial_info.file.download')), name: 'download_geo_file', class: 'btn btn-primary col-sm-7', href ="none" %>
     </div>
 <% end %>
