--- a/app/views/catalog/_index_split_default.html.erb
+++ b/app/views/catalog/_index_split_default.html.erb
@@ -1,12 +1,13 @@
 <% # header bar for doc items in index view -%>
-<% icon_src = "" %>
-<% icon_src = document[Settings.FIELDS.SOURCE_ICON] if !document[Settings.FIELDS.SOURCE_ICON].blank? %>
 <%= content_tag :div, class: 'documentHeader row', data: { layer_id: document.id, bbox: document.bounding_box_as_wsen } do %>
   <span class="col-2 col-md-3 col-xl-2 p-0">
-    <img class="pull-right repo-icon" src="<%= icon_src %>"/>
+    <% if !document[Settings.FIELDS.PROVENANCE].blank? %>
+      <% safe_img_src =  "repo/" + get_safe_repo_name(document[Settings.FIELDS.PROVENANCE]) + ".png" %>
+      <%= image_tag safe_img_src, alt: document[Settings.FIELDS.PROVENANCE] + " " + I18n.t("blacklight.search.logo"), class: "pull-right repo-icon" %>
+    <% end %>
   </span>
-  <span class="col-10 col-md-9 col-xl-10">
-    <div class="index_title col">
+  <span class="col-10 col-md-9 col-xl-10 p-1">
+    <div class="col index_title pl-0">
       <span class="title-wrapper">
         <%= link_to_document document, title: document[blacklight_config.index.title_field] %>
       </span>
@@ -15,7 +16,7 @@
       </span>
     </div>
 
-    <div class='col more-info-area'>
+    <div class='col more-info-area pl-1'>
       <div class="index_publisher">
         <%= document[Settings.FIELDS.PUBLISHER] %>
       </div>
