trying to adjust download

--- a/app/views/catalog/_show_geo_downloads.erb
+++ b/app/views/catalog/_show_geo_downloads.erb
@@ -9,6 +9,6 @@
     </div>
 
     <div id="download_button" class="row mb-3">
-                <%= link_to (fa_icon "download", text: t('geoblacklight.show.geospatial_info.file.download')), 'https://demo.borland.com/testsite/downloads/Hello.txt', target: "_blank", class: 'btn btn-primary col-sm-7', method: :get %>
+                <%= link_to (fa_icon "download", text: t('geoblacklight.show.geospatial_info.file.download')), 'https://demo.borland.com/testsite/downloads/Hello.txt', download: "test.html", class: 'btn btn-primary col-sm-7' %>
     </div>
 <% end %>
