--- a/app/views/catalog/_show_geo_downloads.erb
+++ b/app/views/catalog/_show_geo_downloads.erb
@@ -8,7 +8,7 @@
         <%= select_tag 'download_geo_file_choose', options_for_select(document.files(t('geoblacklight.show.geospatial_info.file.none'))), class: 'form-select col-sm-9 download-select' %>
     </div>
 
-    <div id="download_button" class="row mb-3">
+    <div class="row mb-3">
                 <%= link_to (fa_icon "download", text: t('geoblacklight.show.geospatial_info.file.download')), 'https://demo.borland.com/testsite/downloads/Hello.txt', class: 'btn btn-primary col-sm-7', id: "download_button", download: "test" %>
     </div>
 <% end %>
