--- a/app/views/catalog/_show_geo_downloads.erb
+++ b/app/views/catalog/_show_geo_downloads.erb
@@ -9,6 +9,6 @@
     </div>
 
     <div class="row mb-3">
-                <%= button_to (fa_icon "download", text: t('geoblacklight.show.geospatial_info.file.download')), 'https://demo.borland.com/testsite/downloads/Hello.txt', class: 'btn btn-primary col-sm-7', id: "download_button", download: "test", data_info: document.download_info, disabled: true %>
+                <%= link_to (fa_icon "download", text: t('geoblacklight.show.geospatial_info.file.download')), 'https://demo.borland.com/testsite/downloads/Hello.txt', class: 'btn btn-primary col-sm-7', id: "download_button", download: "test", data_info: document.download_info, disabled: true %>
     </div>
 <% end %>
