Renamed class and made css important

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -189,6 +189,6 @@ hr.metadata-divider {
     width: 72px;
 }
 
-.disable-link_button {
-    background-color: #6c757d
+.disabled_button {
+    background-color: #6c757d !important
 }
