--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -191,4 +191,7 @@ hr.metadata-divider {
 
 .disabled_button {
     background-color: #6c757d !important
+    outline-color: #6c757d !important
+    text-decoration: None !important
+    cursor: default !important
 }
