--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -191,11 +191,7 @@ hr.metadata-divider {
 
 .disabled_button {
     background-color: #6c757d !important
-    outline-color: #6c757d !important
-    text-decoration: none !important
-    cursor: default !important
-}
-.disabled_button:hover {
+    border-color: #6c757d !important
     text-decoration: none !important
     cursor: default !important
 }
