forgot the css commas

--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -190,9 +190,9 @@ hr.metadata-divider {
 }
 
 .disabled_button {
-    background-color: #6c757d !important
-    border-color: #6c757d !important
-    text-decoration: none !important
-    cursor: default !important
+    background-color: #6c757d !important;
+    border-color: #6c757d !important;
+    text-decoration: none !important;
+    cursor: default !important;
 }
 
