--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -193,6 +193,10 @@ hr.metadata-divider {
     background-color: #6c757d !important;
     border-color: #6c757d !important;
     text-decoration: none !important;
-    cursor: default !important;
+    cursor: not-allowed !important;
+}
+
+.disabled_button:hover {
+    text-decoration: none !important;
 }
 
